test_inputs/invalid/10_missing_param_comma.mt
@triton.jit
def bad_params(x y): {
  z = x + y;
}
